# poser

./: .gitignore  CMakeLists.txt  README.md  dialect.h  entry.c  io.h  main.c  mem.h  mem_copy.c  mem_copy.h  put.c  put.h  rare.h  runmain.bat  str.c  str.h  todo.md
poser/: dialect.h  poser.h
poser/comp/: arg_inf.h  assert.h  bassert.h  bflt.h  bint.h  comp.h  count_args.h  dialect.h  narg.h  va_args.h  va_init.h  xplat.h
poser/file/: file.h  file_open.c  file_open.h
poser/fstr/: fstr.c  fstr.h  fstr_to_stack.h
poser/io/: io.h  put.c  put.h  put_clr.c  put_clr.h  put_f.c  put_f.h  write.c  write.h
poser/mem/: halloc.c  halloc.h  mem.h  mem_cmp.c  mem_cmp.h  mem_copy.c  mem_copy.h  mem_move.c  mem_move.h  mem_set.c  mem_set.h  salloc.h
poser/str/: fmt_to.c  fmt_to.h  fmt_to_fstr.c  fmt_to_fstr.h  hstr.c  hstr.h  m_args_wrapper.h  m_to_str.h  str.c  str.h  str_cmp.c  str_cmp.h  to_str.c  to_str.h
poser/sys/: ___chkstk_ms.c  ___chkstk_ms.h  sleep.c  sleep.h  sys.h  sys_command.c  sys_command.h  sys_exit.c  sys_exit.h  sys_inf.c  sys_inf.h  sys_plat.h  sys_time.c  sys_time.h  sysinf.c  sysinf.h
poser/thrd/: mutex.c  mutex.h  spinlock.c  spinlock.h  thrd.h  thread.c  thread.h
